@@ -11,7 +11,7 @@ Notes for Developers
   Repo: http://hg.python.org/cpython (default branch)
   More info: http://wiki.python.org/moin/Distutils/Contributing
 
-- Distutils2 runs on Python from 2.4 to 2.7, so make sure you don't use code
+- Distutils2 runs on Python from 2.5 to 2.7, so make sure you don't use code
   that doesn't work under one of these Python versions.  The version in the
   "python3" branch is compatible with all version from 3.1 to 3.3.
 
@@ -21,12 +21,8 @@ Notes for Developers
   have a look or use a diff tool with the same file in distutils or packaging
   from Python 3.3.  If you can't run tests, let someone else do the merge.
 
-- For 2.4, you need to run "python2.4 setup.py build" before you can try out
-  pysetup or run tests (unless you use the runtests.py script which will call
-  "setup.py build" automatically).
-
 - Always run tests.sh before you commit a change.  This implies that you have
-  all Python versions installed from 2.4 to 2.7, as well as 3.1-.3.3 if you
+  all Python versions installed from 2.5 to 2.7, as well as 3.1-.3.3 if you
   merge into the python3 branch.  Be sure to also have docutils installed on all
   Python versions to avoid skipping tests.
 
