@@ -1,4 +1,14 @@
 #!/bin/sh
+echo -n "Running tests with Python 2.5... "
+python2.5 -Wd runtests.py -q
+if [ $? -ne 0 ];then
+    echo Failed, re-running
+    python2.5 -Wd runtests.py
+    exit $?
+else
+    echo Success
+fi
+
 echo -n "Running tests with Python 2.6... "
 python2.6 -Wd runtests.py -q
 if [ $? -ne 0 ];then
