@@ -1,6 +1,6 @@
 [tox]
 #distshare={homedir}/.tox/distshare
-envlist=py24,py25,py26,py26-s,py27
+envlist=py25,py26,py26-s,py27
 
 [tox:hudson]
 #distshare={toxworkdir}/distshare
@@ -19,11 +19,4 @@ distribute=False
 [testenv:py27]
 basepython=python2.7
 commands=
-    nosetests --with-xunit distutils2/tests
-
-[testenv:py24]
-basepython=python2.4
-commands=
-    rm -f distutils2/_backport/_hashlib.so
-    python setup.py build_ext -f
     nosetests --with-xunit distutils2/tests
